--- a/src/main/resources/assets/elementalitems/lang/en_us.lang
+++ b/src/main/resources/assets/elementalitems/lang/en_us.lang
@@ -51,13 +51,12 @@ item.sword_plain.name=Crystal Sword
 # ores
 tile.ore_plain.name=Crystal Ore
 tile.ore_fire.name=Fire Crystal Ore
-# tile.netherCrystal_Ore.name=Fire Crystal Ore
 tile.ore_water.name=Water Crystal Ore
 tile.ore_leaf.name=Leaf Crystal Ore
 tile.ore_air.name=Sky Crystal Ore
 tile.ore_earth.name=Earth Crystal Ore
 tile.ore_ice.name=Cracked Ice
-tile.ore_end.name=End Crystal Ore
+tile.ore_ender.name=End Crystal Ore
 # blocks
 tile.block_crystal_plain.name=Crystal Block
 tile.block_crystal_fire.name=Fire Crystal Block
@@ -103,3 +102,13 @@ item.feet_leaf.name=Leaf Boots
 item.feet_ice.name=Ice Boots
 item.feet_ender.name=Ender Boots
 item.feet_plain.name=Crystal Boots
+# Arrows
+item.arrow_plain.name=Crystal Arrow
+item.arrow_fire.name=Fire Arrow
+item.arrow_water.name=Water Arrow
+item.arrow_ice.name=Ice Arrow
+item.arrow_leaf.name=Leaf Arrow
+# haha very funny
+item.arrow_air.name=Airrow
+item.arrow_earth.name=Earth Arrow
+item.arrow_ender.name=Ender Arrow
