more hammer stuff, fixing gradle for good

--- a/src/main/resources/assets/elementalitems/lang/en_us.lang
+++ b/src/main/resources/assets/elementalitems/lang/en_us.lang
@@ -124,3 +124,4 @@ item.arrow_ender.name=Ender Arrow
 
 # unique items for each element
 item.flamethrower.name=Flamethrower
+item.hammer.name=Armor Crusher
