fix lang file, fix arrow crafting recipes

--- a/src/main/resources/assets/elementalitems/lang/en_us.json
+++ b/src/main/resources/assets/elementalitems/lang/en_us.json
@@ -1,113 +1,113 @@
 {
-  "language.name": "English",
+  "language": "English",
   "language.region": "United States",
   "language.code": "en_us",
-  "item.elementalitems.crystal_plain.name": "Crystal",
-  "item.elementalitems.crystal_fire.name": "Fire Crystal",
-  "item.elementalitems.crystal_ice.name": "Ice Shard",
-  "item.elementalitems.crystal_water.name": "Water Crystal",
-  "item.elementalitems.crystal_leaf.name": "Leaf Crystal",
-  "item.elementalitems.crystal_earth.name": "Earth Crystal",
-  "item.elementalitems.crystal_air.name": "Sky Crystal",
-  "item.elementalitems.crystal_ender.name": "Ender Crystal",
-  "item.elementalitems.pickaxe_plain.name": "Crystal Pickaxe",
-  "item.elementalitems.pickaxe_fire.name": "Fire Pickaxe",
-  "item.elementalitems.pickaxe_ice.name": "Ice Pickaxe",
-  "item.elementalitems.pickaxe_water.name": "Water Pickaxe",
-  "item.elementalitems.pickaxe_leaf.name": "Leaf Pickaxe",
-  "item.elementalitems.pickaxe_earth.name": "Earth Pickaxe",
-  "item.elementalitems.pickaxe_air.name": "Sky Pickaxe",
-  "item.elementalitems.pickaxe_ender.name": "Ender Pickaxe",
-  "item.elementalitems.shovel_plain.name": "Crystal Shovel",
-  "item.elementalitems.shovel_fire.name": "Fire Shovel",
-  "item.elementalitems.shovel_ice.name": "Ice Shovel",
-  "item.elementalitems.shovel_water.name": "Water Shovel",
-  "item.elementalitems.shovel_leaf.name": "Leaf Shovel",
-  "item.elementalitems.shovel_earth.name": "Earth Shovel",
-  "item.elementalitems.shovel_air.name": "Sky Shovel",
-  "item.elementalitems.shovel_ender.name": "Ender Shovel",
-  "item.elementalitems.axe_plain.name": "Crystal Axe",
-  "item.elementalitems.axe_fire.name": "Fire Axe",
-  "item.elementalitems.axe_ice.name": "Ice Axe",
-  "item.elementalitems.axe_water.name": "Water Axe",
-  "item.elementalitems.axe_leaf.name": "Leaf Axe",
-  "item.elementalitems.axe_earth.name": "Earth Axe",
-  "item.elementalitems.axe_air.name": "Sky Axe",
-  "item.elementalitems.axe_ender.name": "Ender Axe",
-  "item.elementalitems.sword_plain.name": "Crystal Sword",
-  "item.elementalitems.sword_fire.name": "Fire Sword",
-  "item.elementalitems.sword_ice.name": "Ice Sword",
-  "item.elementalitems.sword_water.name": "Water Sword",
-  "item.elementalitems.sword_leaf.name": "Leaf Sword",
-  "item.elementalitems.sword_earth.name": "Earth Sword",
-  "item.elementalitems.sword_air.name": "Sky Sword",
-  "item.elementalitems.sword_ender.name": "Ender Sword",
-  "item.elementalitems.sword_life_death.name": "Sword of Life and Death",
-  "item.elementalitems.sword_fire_ice.name": "Frost Fire Sword",
-  "item.elementalitems.sword_fire_water.name": "Steam Sword",
-  "item.elementalitems.sword_fire_earth.name": "Meteor Sword",
-  "item.elementalitems.sword_ice_water.name": "Glacial Sword",
-  "item.elementalitems.sword_ice_air.name": "Blizzard Sword",
-  "item.elementalitems.sword_ice_ender.name": "Void Sword",
-  "item.elementalitems.sword_water_leaf.name": "Jungle Sword",
-  "item.elementalitems.sword_water_air.name": "Typhoon Sword",
-  "item.elementalitems.sword_leaf_air.name": "Pollen Sword",
-  "block.elementalitems.ore_plain.name": "Crystal Ore",
-  "block.elementalitems.ore_fire.name": "Fire Crystal Ore",
-  "block.elementalitems.ore_ice.name": "Cracked Ice",
-  "block.elementalitems.ore_water.name": "Water Crystal Ore",
-  "block.elementalitems.ore_leaf.name": "Leaf Crystal Ore",
-  "block.elementalitems.ore_earth.name": "Earth Crystal Ore",
-  "block.elementalitems.ore_air.name": "Sky Crystal Ore",
-  "block.elementalitems.ore_ender.name": "End Crystal Ore",
-  "block.elementalitems.block_crystal_plain.name": "Crystal Block",
-  "block.elementalitems.block_crystal_fire.name": "Fire Crystal Block",
-  "block.elementalitems.block_crystal_ice.name": "Ice Crystal Block",
-  "block.elementalitems.block_crystal_water.name": "Water Crystal Block",
-  "block.elementalitems.block_crystal_leaf.name": "Leaf Crystal Block",
-  "block.elementalitems.block_crystal_earth.name": "Earth Crystal Block",
-  "block.elementalitems.block_crystal_air.name": "Sky Crystal Block",
-  "block.elementalitems.block_crystal_ender.name": "End Crystal Block",
-  "item.elementalitems.head_plain.name": "Crystal Helmet",
-  "item.elementalitems.head_fire.name": "Fire Helmet",
-  "item.elementalitems.head_ice.name": "Ice Helmet",
-  "item.elementalitems.head_water.name": "Water Helmet",
-  "item.elementalitems.head_leaf.name": "Leaf Helmet",
-  "item.elementalitems.head_earth.name": "Earth Helmet",
-  "item.elementalitems.head_air.name": "Sky Helmet",
-  "item.elementalitems.head_ender.name": "Ender Helmet",
-  "item.elementalitems.chest_plain.name": "Crystal Chestplate",
-  "item.elementalitems.chest_fire.name": "Fire Chestplate",
-  "item.elementalitems.chest_ice.name": "Ice Chestplate",
-  "item.elementalitems.chest_water.name": "Water Chestplate",
-  "item.elementalitems.chest_leaf.name": "Leaf Chestplate",
-  "item.elementalitems.chest_earth.name": "Earth Chestplate",
-  "item.elementalitems.chest_air.name": "Sky Chestplate",
-  "item.elementalitems.chest_ender.name": "Ender Chestplate",
-  "item.elementalitems.legs_plain.name": "Crystal Leggings",
-  "item.elementalitems.legs_fire.name": "Fire Leggings",
-  "item.elementalitems.legs_ice.name": "Ice Leggings",
-  "item.elementalitems.legs_water.name": "Water Leggings",
-  "item.elementalitems.legs_leaf.name": "Leaf Leggings",
-  "item.elementalitems.legs_earth.name": "Earth Leggings",
-  "item.elementalitems.legs_air.name": "Sky Leggings",
-  "item.elementalitems.legs_ender.name": "Ender Leggings",
-  "item.elementalitems.feet_plain.name": "Crystal Boots",
-  "item.elementalitems.feet_fire.name": "Fire Boots",
-  "item.elementalitems.feet_ice.name": "Ice Boots",
-  "item.elementalitems.feet_water.name": "Water Boots",
-  "item.elementalitems.feet_leaf.name": "Leaf Boots",
-  "item.elementalitems.feet_earth.name": "Earth Boots",
-  "item.elementalitems.feet_air.name": "Sky Boots",
-  "item.elementalitems.feet_ender.name": "Ender Boots",
-  "item.elementalitems.arrow_plain.name": "Crystal Arrow",
-  "item.elementalitems.arrow_fire.name": "Fire Arrow",
-  "item.elementalitems.arrow_water.name": "Water Arrow",
-  "item.elementalitems.arrow_ice.name": "Ice Arrow",
-  "item.elementalitems.arrow_leaf.name": "Leaf Arrow",
-  "item.elementalitems.arrow_earth.name": "Earth Arrow",
-  "item.elementalitems.arrow_air.name": "Airrow",
-  "item.elementalitems.arrow_ender.name": "Ender Arrow",
-  "item.elementalitems.flamethrower.name": "Flamethrower",
-  "item.elementalitems.warhammer.name": "Armor Crusher"
+  "item.elementalitems.crystal_plain": "Crystal",
+  "item.elementalitems.crystal_fire": "Fire Crystal",
+  "item.elementalitems.crystal_ice": "Ice Shard",
+  "item.elementalitems.crystal_water": "Water Crystal",
+  "item.elementalitems.crystal_leaf": "Leaf Crystal",
+  "item.elementalitems.crystal_earth": "Earth Crystal",
+  "item.elementalitems.crystal_air": "Sky Crystal",
+  "item.elementalitems.crystal_ender": "Ender Crystal",
+  "item.elementalitems.pickaxe_plain": "Crystal Pickaxe",
+  "item.elementalitems.pickaxe_fire": "Fire Pickaxe",
+  "item.elementalitems.pickaxe_ice": "Ice Pickaxe",
+  "item.elementalitems.pickaxe_water": "Water Pickaxe",
+  "item.elementalitems.pickaxe_leaf": "Leaf Pickaxe",
+  "item.elementalitems.pickaxe_earth": "Earth Pickaxe",
+  "item.elementalitems.pickaxe_air": "Sky Pickaxe",
+  "item.elementalitems.pickaxe_ender": "Ender Pickaxe",
+  "item.elementalitems.shovel_plain": "Crystal Shovel",
+  "item.elementalitems.shovel_fire": "Fire Shovel",
+  "item.elementalitems.shovel_ice": "Ice Shovel",
+  "item.elementalitems.shovel_water": "Water Shovel",
+  "item.elementalitems.shovel_leaf": "Leaf Shovel",
+  "item.elementalitems.shovel_earth": "Earth Shovel",
+  "item.elementalitems.shovel_air": "Sky Shovel",
+  "item.elementalitems.shovel_ender": "Ender Shovel",
+  "item.elementalitems.axe_plain": "Crystal Axe",
+  "item.elementalitems.axe_fire": "Fire Axe",
+  "item.elementalitems.axe_ice": "Ice Axe",
+  "item.elementalitems.axe_water": "Water Axe",
+  "item.elementalitems.axe_leaf": "Leaf Axe",
+  "item.elementalitems.axe_earth": "Earth Axe",
+  "item.elementalitems.axe_air": "Sky Axe",
+  "item.elementalitems.axe_ender": "Ender Axe",
+  "item.elementalitems.sword_plain": "Crystal Sword",
+  "item.elementalitems.sword_fire": "Fire Sword",
+  "item.elementalitems.sword_ice": "Ice Sword",
+  "item.elementalitems.sword_water": "Water Sword",
+  "item.elementalitems.sword_leaf": "Leaf Sword",
+  "item.elementalitems.sword_earth": "Earth Sword",
+  "item.elementalitems.sword_air": "Sky Sword",
+  "item.elementalitems.sword_ender": "Ender Sword",
+  "item.elementalitems.sword_life_death": "Sword of Life and Death",
+  "item.elementalitems.sword_fire_ice": "Frost Fire Sword",
+  "item.elementalitems.sword_fire_water": "Steam Sword",
+  "item.elementalitems.sword_fire_earth": "Meteor Sword",
+  "item.elementalitems.sword_ice_water": "Glacial Sword",
+  "item.elementalitems.sword_ice_air": "Blizzard Sword",
+  "item.elementalitems.sword_ice_ender": "Void Sword",
+  "item.elementalitems.sword_water_leaf": "Jungle Sword",
+  "item.elementalitems.sword_water_air": "Typhoon Sword",
+  "item.elementalitems.sword_leaf_air": "Pollen Sword",
+  "block.elementalitems.ore_plain": "Crystal Ore",
+  "block.elementalitems.ore_fire": "Fire Crystal Ore",
+  "block.elementalitems.ore_ice": "Cracked Ice",
+  "block.elementalitems.ore_water": "Water Crystal Ore",
+  "block.elementalitems.ore_leaf": "Leaf Crystal Ore",
+  "block.elementalitems.ore_earth": "Earth Crystal Ore",
+  "block.elementalitems.ore_air": "Sky Crystal Ore",
+  "block.elementalitems.ore_ender": "End Crystal Ore",
+  "block.elementalitems.block_crystal_plain": "Crystal Block",
+  "block.elementalitems.block_crystal_fire": "Fire Crystal Block",
+  "block.elementalitems.block_crystal_ice": "Ice Crystal Block",
+  "block.elementalitems.block_crystal_water": "Water Crystal Block",
+  "block.elementalitems.block_crystal_leaf": "Leaf Crystal Block",
+  "block.elementalitems.block_crystal_earth": "Earth Crystal Block",
+  "block.elementalitems.block_crystal_air": "Sky Crystal Block",
+  "block.elementalitems.block_crystal_ender": "End Crystal Block",
+  "item.elementalitems.head_plain": "Crystal Helmet",
+  "item.elementalitems.head_fire": "Fire Helmet",
+  "item.elementalitems.head_ice": "Ice Helmet",
+  "item.elementalitems.head_water": "Water Helmet",
+  "item.elementalitems.head_leaf": "Leaf Helmet",
+  "item.elementalitems.head_earth": "Earth Helmet",
+  "item.elementalitems.head_air": "Sky Helmet",
+  "item.elementalitems.head_ender": "Ender Helmet",
+  "item.elementalitems.chest_plain": "Crystal Chestplate",
+  "item.elementalitems.chest_fire": "Fire Chestplate",
+  "item.elementalitems.chest_ice": "Ice Chestplate",
+  "item.elementalitems.chest_water": "Water Chestplate",
+  "item.elementalitems.chest_leaf": "Leaf Chestplate",
+  "item.elementalitems.chest_earth": "Earth Chestplate",
+  "item.elementalitems.chest_air": "Sky Chestplate",
+  "item.elementalitems.chest_ender": "Ender Chestplate",
+  "item.elementalitems.legs_plain": "Crystal Leggings",
+  "item.elementalitems.legs_fire": "Fire Leggings",
+  "item.elementalitems.legs_ice": "Ice Leggings",
+  "item.elementalitems.legs_water": "Water Leggings",
+  "item.elementalitems.legs_leaf": "Leaf Leggings",
+  "item.elementalitems.legs_earth": "Earth Leggings",
+  "item.elementalitems.legs_air": "Sky Leggings",
+  "item.elementalitems.legs_ender": "Ender Leggings",
+  "item.elementalitems.feet_plain": "Crystal Boots",
+  "item.elementalitems.feet_fire": "Fire Boots",
+  "item.elementalitems.feet_ice": "Ice Boots",
+  "item.elementalitems.feet_water": "Water Boots",
+  "item.elementalitems.feet_leaf": "Leaf Boots",
+  "item.elementalitems.feet_earth": "Earth Boots",
+  "item.elementalitems.feet_air": "Sky Boots",
+  "item.elementalitems.feet_ender": "Ender Boots",
+  "item.elementalitems.arrow_plain": "Crystal Arrow",
+  "item.elementalitems.arrow_fire": "Fire Arrow",
+  "item.elementalitems.arrow_water": "Water Arrow",
+  "item.elementalitems.arrow_ice": "Ice Arrow",
+  "item.elementalitems.arrow_leaf": "Leaf Arrow",
+  "item.elementalitems.arrow_earth": "Earth Arrow",
+  "item.elementalitems.arrow_air": "Airrow",
+  "item.elementalitems.arrow_ender": "Ender Arrow",
+  "item.elementalitems.flamethrower": "Flamethrower",
+  "item.elementalitems.warhammer": "Armor Crusher"
 }
